--- a/appveyor.yml
+++ b/appveyor.yml
@@ -63,10 +63,10 @@ install:
 
   # set env for android
   - if "%toolchain%"=="Android" set PATH=C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin;%PATH%
-
+  - dir C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin
+  
   # test version  
-  - cmake --version
-  - cmake -G
+  - cmake --version  
   - python --version
   - echo %platform%
   
