--- a/appveyor.yml
+++ b/appveyor.yml
@@ -55,6 +55,9 @@ install:
   # - move C:\projects\deps\cmake-* C:\projects\deps\cmake # Move to a version-agnostic directory
   # - set PATH=C:\projects\deps\cmake\bin;%PATH%
   
+  # remove conflict sh.exe
+  - set PATH=%PATH:C:\Program Files (x86)\Git\bin;=%
+  
   # set env for python
   - set PATH=C:\Python37;%PATH%
   
@@ -63,7 +66,6 @@ install:
 
   # set env for android
   - if "%toolchain%"=="Android" set PATH=C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin;%PATH%
-  - dir C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin
   
   # test version  
   - cmake --version  
