--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ environment:
       toolchain: Android
       configuration: Release
       cmake_args: -B ./PrjAndroid -G "MinGW Makefiles"      
-      android_ndk: C:/ProgramData/Microsoft/android_ndk64/android-ndk-r17
+      android_ndk: C:\ProgramData\Microsoft\android_ndk64\android-ndk-r17
       android_abi: armeabi-v7a with NEON
       android_min_sdk: 21
       
