--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,7 +123,7 @@ endif()
 # android
 if (BUILD_ANDROID)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-narrowing")
-	set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -Wno-narrowing")
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-narrowing")
 endif()
 
 # visual studio
