feat: #3 Add version on output artifacts

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -97,7 +97,8 @@ build_script:
 
 after_build:
   - mkdir Build
-  - set output_zip=Build\SkylichtDemo_%toolchain%_%arch%.zip  
+  - call set file_version=%%APPVEYOR_BUILD_VERSION:.=_%%
+  - set output_zip=Build\SkylichtDemo_%file_version%_%toolchain%_%arch%.zip  
   - if "%toolchain%"=="MSVC" (
       7z a %output_zip% Bin\Windows\Libs\%configuration%\*.lib
     )
