--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,13 +48,6 @@ install:
   # clone submodules
   - git submodule update --init --recursive
   
-  # Install a recent CMake for "MinGW Makefiles"
-  # - set CMAKE_URL="https://github.com/Kitware/CMake/releases/download/v3.15.4/cmake-3.15.4-win64-x64.zip"
-  # - appveyor DownloadFile %CMAKE_URL% -FileName cmake.zip
-  # - 7z x cmake.zip -oC:\projects\deps > nul
-  # - move C:\projects\deps\cmake-* C:\projects\deps\cmake # Move to a version-agnostic directory
-  # - set PATH=C:\projects\deps\cmake\bin;%PATH%
-  
   # remove conflict sh.exe
   - set PATH=%PATH:C:\Program Files\Git\usr\bin;=%
   
@@ -78,11 +71,7 @@ before_build:
   - cd C:\Projects\Skylicht_Engine
   - echo %arch%
   - echo %cmake_args%
-  - if "%toolchain%"=="Android" (
-      cmake -S . %cmake_args% -DTARGET_ARCH=ANDROID -DCMAKE_TOOLCHAIN_FILE=%android_ndk%/build/cmake/android.toolchain.cmake -DANDROID_ABI="%android_abi%" -DANDROID_ARM_NEON=ON -DANDROID_NATIVE_API_LEVEL=%android_min_sdk%
-    ) else (
-      cmake -S . %cmake_args%
-    )
+  - cmake -S . %cmake_args%
 
 build_script:
   - if "%toolchain%"=="MSVC" (
@@ -90,10 +79,7 @@ build_script:
     )
   - if "%toolchain%"=="Cygwin" (
       make -C PrjCygwin
-    )
-  - if "%toolchain%"=="Android" (
-      mingw32-make -C PrjAndroid
-    )
+    )  
 
 after_build:
   - mkdir Build
@@ -104,31 +90,35 @@ after_build:
     )
   - if "%toolchain%"=="Cygwin" (
       7z a %output_zip% Bin\Windows\Libs\*.a
-    )
-  - if "%toolchain%"=="Android" (
-      7z a %output_zip% Bin\Android\Libs\*.a
-    )
+    )  
   
 test: off
 
 artifacts:
   - path: Build\*.zip
       
-#for:
-#  -
-    #branches:
-    #  only:
-    #    - master
-    #      configuration: Release
-          
-    #artifacts:
-      # all zip build
-      #- path: Build\*.zip
-    
-    #deploy:
-    #- provider: GitHub
-    #  auth_token:
-    #    secure: the-token-is-hidden-on-purpose
-    #  force_update: true
-    #  on:
-    #    APPVEYOR_REPO_TAG: true
+for:
+  -
+    matrix:
+      only:
+        - toolchain: Android
+    before_build:
+      - cd C:\Projects\Skylicht_Engine
+      - echo %arch%
+      - echo %cmake_args%      
+      - cmake -S . %cmake_args% -DTARGET_ARCH=ANDROID -DCMAKE_TOOLCHAIN_FILE=%android_ndk%/build/cmake/android.toolchain.cmake -DANDROID_ABI="%android_abi%" -DANDROID_ARM_NEON=ON -DANDROID_NATIVE_API_LEVEL=%android_min_sdk%
+    build_script:
+      - mingw32-make -C PrjAndroid
+    after_build:
+      - mkdir Build
+      - call set file_version=%%APPVEYOR_BUILD_VERSION:.=_%%
+      - set output_zip=Build\SkylichtDemo_%file_version%_%toolchain%_%arch%.zip
+      - 7z a %output_zip% Bin\Android\Libs\*.a
+      
+#deploy:
+#- provider: GitHub
+#  auth_token:
+#    secure: the-token-is-hidden-on-purpose
+#  force_update: true
+#  on:
+#    APPVEYOR_REPO_TAG: true
