--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,13 @@ jobs:
     - name: Install Dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libglfw3-dev libsdl2-dev gcc-multilib g++-multilib
+        sudo apt-get install -y libglfw3-dev libsdl2-dev
+        cmake --version
       
     - name: Build
       run: |
-        cmake -S . -B ./PrjGCC
-        make -C PrjGCC
+        cmake -S . -D BUILD_SDL
+        make
       
     - name: Zip
       run: |
