fix: #10 Fix build file system

--- a/Projects/Irrlicht/CMakeLists.txt
+++ b/Projects/Irrlicht/CMakeLists.txt
@@ -7,9 +7,7 @@ include_directories(
 if(BUILD_SDL)
 	if(MSVC)
 		include_directories(${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/ThirdPartySDK/SDL/include)
-	endif()
-
-	if(CYGWIN OR MINGW)
+	else()
 		find_file(SDL2_INCLUDE_DIR NAME SDL.h HINTS SDL2)		
 		include_directories(${SDL2_INCLUDE_DIR})
 	endif()
@@ -48,9 +46,7 @@ endif()
 if(BUILD_SDL)
 	if(MSVC)
 		target_link_libraries(Irrlicht SDL2)
-	endif()
-
-	if(CYGWIN OR MINGW)
+	else()
 		find_library(SDL2_LIBRARY NAME SDL2)
 		target_link_libraries(Irrlicht ${SDL2_LIBRARY})  
 	endif()	
