Fix: #10 Fix error cmake

--- a/Projects/Irrlicht/CMakeLists.txt
+++ b/Projects/Irrlicht/CMakeLists.txt
@@ -7,7 +7,9 @@ include_directories(
 if(BUILD_SDL)
 	if(MSVC)
 		include_directories(${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/ThirdPartySDK/SDL/include)
-	else()
+	endif()
+
+	if(CYGWIN OR MINGW)
 		find_file(SDL2_INCLUDE_DIR NAME SDL.h HINTS SDL2)		
 		include_directories(${SDL2_INCLUDE_DIR})
 	endif()
@@ -46,7 +48,9 @@ endif()
 if(BUILD_SDL)
 	if(MSVC)
 		target_link_libraries(Irrlicht SDL2)
-	else()
+	endif()
+
+	if(CYGWIN OR MINGW)
 		find_library(SDL2_LIBRARY NAME SDL2)
 		target_link_libraries(Irrlicht ${SDL2_LIBRARY})  
 	endif()	
