feat: #12 Install emsdk latest-fastcomp

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,8 @@ jobs:
         git clone https://github.com/emscripten-core/emsdk.git
         cd emsdk
         git pull
-        ./emsdk install latest
-        ./emsdk activate latest
+        ./emsdk install latest-fastcomp
+        ./emsdk activate latest-fastcomp
         source ./emsdk_env.sh
         cd ..
         
