feat: #12 Fix error command

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,11 +18,12 @@ jobs:
         source ./emsdk_env.sh
         ls -l fastcomp/emscripten/system/include
         cd ..
-        wget -O SDL2-version_18.zip -q https://github.com/emscripten-ports/SDL2/archive/version_18.zip        
-        7z e SDL2-version_18.zip
+        wget -O SDL2-version_18.zip -q https://github.com/emscripten-ports/SDL2/archive/version_18.zip
         mkdir InstallLibs
+        mkdir InstallLibs/SDL2-version_18
         mkdir InstallLibs/SDL2
-        cp -p ./SDL2-version_18/include/*.* ./InstallLibs/SDL2/
+        7z e SDL2-version_18.zip -o./InstallLibs/SDL2-version_18
+        cp -p .InstallLibs/SDL2-version_18/include/*.* ./InstallLibs/SDL2/
         
     - name: Build
       run: |        
