feat: #12 Fix extract Zip error

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         mkdir InstallLibs
         mkdir InstallLibs/SDL2-version_18
         mkdir InstallLibs/SDL2
-        7z e SDL2-version_18.zip -o./InstallLibs/SDL2-version_18
+        7z x SDL2-version_18.zip -o./InstallLibs/SDL2-version_18
         cp -p .InstallLibs/SDL2-version_18/include/*.* ./InstallLibs/SDL2/
         
     - name: Build
