--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,9 @@ jobs:
         cd ..
         wget -O SDL2-version_18.zip -q https://github.com/emscripten-ports/SDL2/archive/version_18.zip
         mkdir InstallLibs
-        mkdir InstallLibs/SDL2-version_18
         mkdir InstallLibs/SDL2
-        7z x SDL2-version_18.zip -o./InstallLibs/SDL2-version_18
+        7z x SDL2-version_18.zip -o./InstallLibs
+        ls -l InstallLibs
         cp -p ./InstallLibs/SDL2-version_18/include/*.* ./InstallLibs/SDL2/
         
     - name: Build
