--- a/Projects/Irrlicht/CMakeLists.txt
+++ b/Projects/Irrlicht/CMakeLists.txt
@@ -13,9 +13,9 @@ if(BUILD_SDL OR BUILD_EMSCRIPTEN)
 		# CI will download SDL2 to InstallLibs
 		#wget -O SDL2-version_18.zip -q https://github.com/emscripten-ports/SDL2/archive/version_18.zip
         #mkdir InstallLibs
-        #mkdir InstallLibs/SDL2-version_18
         #mkdir InstallLibs/SDL2
-        #7z x SDL2-version_18.zip -o./InstallLibs/SDL2-version_18
+        #7z x SDL2-version_18.zip -o./InstallLibs
+        #ls -l InstallLibs
         #cp -p ./InstallLibs/SDL2-version_18/include/*.* ./InstallLibs/SDL2/
 		include_directories(${SKYLICHT_ENGINE_SOURCE_DIR}/InstallLibs)
 	endif()
