feat: #14 Update CI for execute application

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,9 @@ jobs:
         wget -O SDL2-version_18.zip -q https://github.com/emscripten-ports/SDL2/archive/version_18.zip
         mkdir InstallLibs
         mkdir InstallLibs/SDL2
-        7z x SDL2-version_18.zip -o./InstallLibs
+        7z x SDL2-version_18.zip -oInstallLibs
         ls -l InstallLibs
-        cp -p ./InstallLibs/SDL2-version_18/include/*.* ./InstallLibs/SDL2/
+        cp -p InstallLibs/SDL2-version_18/include/*.* InstallLibs/SDL2/
         
     - name: Build
       run: |        
@@ -33,8 +33,17 @@ jobs:
     - name: Package
       run: |
         mkdir Build
-        7z a Build/Output.zip ./Bin/Emscripten/Libs/*.a
+        ls -l Bin
+        7z a Build/Skylicht_Demo_Emscripten.zip Bin/*.js
+        7z a Build/Skylicht_Demo_Emscripten.zip Bin/*.html
+        7z a Build/Skylicht_Demo_Emscripten.zip Bin/*.wasm
         
+    - name: Result
+      uses: actions/upload-artifact@v1
+      with:
+        name: Skylicht_Demo_Emscripten
+        path: Build/Skylicht_Demo_Emscripten.zip
+          
   Linux:
     runs-on: ubuntu-latest    
     steps:
@@ -54,4 +63,11 @@ jobs:
     - name: Package
       run: |
         mkdir Build
-        7z a Build/Output.zip ./Bin/Linux/Libs/*.a
+        ls -l Bin
+        7z a Build/Skylicht_Demo_Linux.zip ./Bin/MainApp
+        
+    - name: Result
+      uses: actions/upload-artifact@v1
+      with:
+        name: Skylicht_Demo_Emscripten
+        path: Build/Skylicht_Demo_Emscripten.zip
