--- a/Projects/Irrlicht/CMakeLists.txt
+++ b/Projects/Irrlicht/CMakeLists.txt
@@ -53,10 +53,10 @@ endif()
 if(BUILD_SDL)
 	if(MSVC)
 		target_link_libraries(Irrlicht SDL2)
-	elseif(CYGWIN OR MINGW OR BUILD_LINUX)
+	elseif(CYGWIN OR MINGW)
 		find_library(SDL2_LIBRARY NAME SDL2)
 		target_link_libraries(Irrlicht ${SDL2_LIBRARY})
 	else()
-		target_link_libraries(Irrlicht sdl2)
+		target_link_libraries(Irrlicht SDL2)
 	endif()	
 endif()
