--- a/appveyor.yml
+++ b/appveyor.yml
@@ -102,7 +102,7 @@ for:
       - dir Bin
       - call set file_version=%%APPVEYOR_BUILD_VERSION:.=_%%
       - set output_zip=Build\SkylichtDemo_%file_version%_%toolchain%_%arch%.zip      
-      - 7z a %output_zip% Bin\*.so
+      - 7z a %output_zip% Bin\Android\Libs\*.so
   
   # MSVC
   -
